# terraform-aws-metrics-lambda

./: .ansible-lint  .dockerignore  .gitallowed  .gitignore  .pre-commit-config.yaml  .tflint.hcl  .tool-versions  APACHE-LICENCE.md  CONTRIBUTING.md  Makefile  README.md  README.tpl.md  bootstrap-repo.sh  cloudwatch.tf  docker-compose.yml  function.tf  iam.tf  outputs.tf  pyproject.toml  sonar-project.properties  trivy.yaml  variables.tf  versions.tf
.github/: dependabot.yml
.github/actions/build-common/: action.yml
.github/actions/check-secrets/: action.yml
.github/actions/sonar-properties/: action.yml
.github/actions/sonar-reports/: action.yml  sonar_tests.py
.github/workflows/: merge-develop.yml  pull-request.yml
ansible/: Makefile  hosts
ansible/playbooks/: build-ecr-images.yml
ansible/playbooks/group_vars/all/: constants.yml  docker_images.yml
ansible/playbooks/roles/build_ecr_images/tasks/: build-image-inner.yml  build-image.yml  ensure-image.yml  main.yml  pull-push-image.yml
ansible/playbooks/roles/build_ecr_images/vars/: main.yml
ansible/playbooks/roles/setup_facts/tasks/: main.yml
docker/: hadolint.yml
docker/example/: Dockerfile
helm/: .gitignore  Makefile
helm/ansible/: example-external-vars.yml
helm/example/: .fake-external-vars.yaml  Chart.yaml  Makefile  kustomization.local.yaml  kustomization.nonlocal.yaml  patch.sh
helm/example/env/: nonlocal.values.yaml
helm/local-thing/: Makefile
scripts/: check-secrets.sh
src/: associator.py  clients.py  config.py  executor.py  function.py  model.py  services.py  shared.py
terraform/: Makefile
terraform/modules/example/: locals.tf  outputs.tf  variables.tf
terraform/stacks/local/: .terraform.lock.hcl  Makefile  main.tf  provider.tf
terraform/stacks/main/: .terraform.lock.hcl  Makefile  main.tf  shared.tf  terraform.tf  variables.tf  versions.tf
terraform/vars/: .gitignore  trivy.tfvars
tests/: common.py  conftest.py  test_config.py  test_emit_metrics.py  test_get_resources.py  test_metric_discovery.py
tests/integration/: __init__.py  conftest.py  example_integration_test.py
tests/unit/: conftest.py  hello_world_tests.py
